# pst-reader

./: .gitignore  Cargo.toml  LICENSE  README.md
dev/: MS-OXPROPS-250520.xlsx  [MS-OXPROPS]-250520.txt  pst_bytes.xlsx  ~test.pst.tmp
src/: consts.rs  enums.rs  lib.rs  main.rs  property_definitions.rs  rtf_html_deencapsulate.rs  structs.rs  supporting_functions.rs
src/dev/: MS-OXPROPS-250520.xlsx  [MS-OXPROPS]-250520.docx  [MS-OXPROPS]-250520.tsv  [MS-OXPROPS]-250520_convert_to_csv.py  [MS-PST]-250218.docx  pst_format_notes.md  vibes.md
